--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário de Login</title>
+  <title>Login</title>
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,23 +13,29 @@
 
     <div class="form-wrapper">
       <form name="login">
+
           <div class="input-block">
+            <input type="email" id="login-email" autocomplete="off" required />
             <label for="login-email">Email</label>
-            <input type="email" id="login-email" />
+            <span class="error"></span>
           </div>
+
           <div class="input-block">
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" />
+            <input type="password" id="login-password" autocomplete="off" required />
+            <label for="login-password">Senha</label>
+            <span class="error"></span>
           </div>
+
           <div class="input-block">
-            <button type="submit" id="login-submit" >Login</button>
+            <button type="submit" id="login-submit" >Entrar</button>
           </div>
+
       </form>
     </div>
+
   </section>
 
-  <ul class="squares">
-  </ul>
+  <ul class="squares"></ul>
   
   <script src="script.js"></script>
 </body>
